--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Jie Zheng"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  bio              : "Northwest Univeristy, Xian, Chian. Email:jzheng@nwu.edu.cn"
+  location         : "Xian,China"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "jzheng@nwu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
