--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Jie Zheng"
   pronouns         : # example: "she/her"  
-  bio              : "Northwest Univeristy, Xian, Chian. Email:jzheng@nwu.edu.cn"
+  bio              : "Northwest Univeristy, Xian, China. Email:jzheng@nwu.edu.cn"
   location         : "Xian,China"
   employer         : "Red Brick University"
   uri              : # URL
