--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Jie Zheng"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Northwest Univeristy, Xian, China. Email:jzheng@nwu.edu.cn"
   location         : "Xian,China"
-  employer         : "Red Brick University"
+  employer         : "Northwest Univeristy"
   uri              : # URL
   email            : "jzheng@nwu.edu.cn" 
 
